[package]
name = "hub_fetch"
version = "0.1.0"
authors = ["Dustin Miller <dustin@3qstudios.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = {version = "0.10.*", features = ["blocking"]}
tempfile = "*"
regex = "1"
clap = "*"
toml = "*"
serde = { version = "1.0", features = ["derive"] }
indicatif = "*" 
failure = "*" 
exitfailure = "*"