[package]
name = "hub_fetch"
version = "0.1.1"
authors = ["Dustin Miller <dustin@3qstudios.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = """Simple program for downloading latest releases from github"""
repository = "https://github.com/duslm/hub_fetch"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = {version = "0.10.1", features = ["blocking"]}
tempfile = "3"
regex = "1"
clap = "2"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
indicatif = "0.13" 
failure = "0.1" 
exitfailure = "0.5"